Добавлена реализация security с jwt, добавлены эндпоинты для регистрации, авторизации и просмотра профиля Возникла проблема с реактивной оберткой над репозиторием, он не сохраняет в бд
